# Sophon_model_zoo

./: .gitignore  README.md  TUTORIAL.md  environment.yml
.claude/doc/: sophon_bm1684_knowledge_base.md  sophon_tpumlir_operators.md
.claude/standards/: bmodel_output_management.md  board_deploy_workflow.md  sherpa_sophon_deliver_workflow.md
.claude/subagents/: README.md  cpp-implementer.md  operator-analyst.md  project-initializer.md  python-converter.md
3_docker/: Dockerfile.cross-build  run_docker.sh
Eureka-Audio/: .gitignore  README.md  deploy_to_board.sh  requirements.txt
Eureka-Audio/compile/: export_qwen3_embeds.py  export_whisper_encoder.py  gen_prefix_embeds.py  recompile_qwen3.sh  recompile_whisper.sh  verify_onnx.py
Eureka-Audio/cpp/: CMakeLists.txt  build.sh
Eureka-Audio/cpp/src/: eureka_audio.cpp  eureka_audio.h  main.cpp  tokenizer.cpp  tokenizer.h  whisper_mel.cpp  whisper_mel.h
Eureka-Audio/eureka_infer/: __init__.py
Eureka-Audio/eureka_infer/api/: __init__.py  eureka.py
Eureka-Audio/eureka_infer/utils/: __init__.py  audio.py
Eureka-Audio/python/: benchmark_board.py  infer_board.py
QwenLLM/: BENCHMARK_RESULTS.md  README.md  benchmark_intent.py  compile_qwen35_text_bmodel.sh  compile_qwen3_bmodel.sh  compile_qwen3_small_bmodel.sh  deploy_to_board.sh  download_qwen3_small_weights.sh  download_qwen3_weights.sh
QwenLLM/LLM-TPU/models/Qwen2/cpp_demo/: demo.cpp
QwenLLM/LLM-TPU/models/Qwen2_5/python_demo_share_prompt/: README.md
QwenLLM/cpp/: CMakeLists.txt  build.sh
QwenLLM/cpp/src/: QwenEngine.cpp  QwenEngine.h  main.cpp
QwenLLM/qwen3/python_demo/: pipeline_qwen35.py
QwenLLM/scripts/: compile_qwen3_4b.sh  compile_qwen3_small.sh  deploy_to_board.sh  download_qwen3_4b.sh  download_qwen3_small.sh
chatTTS/: .gitignore  README.md
chatTTS-offical/: .gitignore  requirements.txt
chatTTS-offical/cpp/: README.md
chatTTS-offical/cpp/assets/tokenizer/: added_tokens.json
chatTTS-offical/cpp/cmake/: aarch64.cmake
chatTTS-offical/cpp/include/: chattts.h  decoder_engine.h  gpt_engine.h  vocos_engine.h
chatTTS-offical/cpp/src/: benchmark.cpp  chattts.cpp  decoder_engine.cpp  gpt_engine.cpp  main.cpp  vocos_engine.cpp
chatTTS-offical/python/: benchmark.py  test.py  test_stream.py
chatTTS/cpp/: .gitignore  CMakeLists.txt  ISSUES.md
chatTTS/cpp/src/: benchmark.cpp  main.cpp
chatTTS/python/: README.md
chatTTS/python/ChatTTS/: core.py
chatTTS/tools/: export_onnx_merged.py  exporter.py
docker/: README.md
sensevoice/: README.md
sensevoice/cpp/: CMakeLists.txt  build.sh
sensevoice/cpp/src/: audio_frontend.cpp  audio_frontend.h  main.cpp  sensevoice_config.h  sensevoice_inference.cpp  sensevoice_inference.h  tokenizer.cpp  tokenizer.h
sensevoice/python/: export_onnx.py  gen_bmodel.sh
sophon_demo/whisper/: README.md
sophon_demo/whisper/docs/: Whisper_Export_Guide.md
sophon_demo/whisper/python/: README.md  requirements.txt
sophon_demo/whisper/python/bmwhisper/: __init__.py  decoding.py  model.py  transcribe.py  utils.py
sophon_demo/whisper/scripts/: download.sh  gen_bmodel.sh  gen_onnx.sh
sophon_demo/whisper/tools/export_whisper/: __init__.py  decoding.py  export_onnx.py  gather.py  model.py
vits-melo-tts-zh_en/: deploy_to_board.sh
vits-melo-tts-zh_en/cpp/: CMakeLists.txt  build.sh
vits-melo-tts-zh_en/cpp/src/: main.cpp  tts_inference.cpp  tts_inference.h  wav_writer.h
vits-melo-tts-zh_en/python/: README.md  export_onnx.py  gen_bmodel.sh  make_split_models.py  make_tpu_model.py
vits-melo-tts-zh_en/python/test/: test_onnx.py  test_pytorch.py
vits-melo-tts-zh_en/python/test/outputs/baseline/: summary.json
vits-melo-tts-zh_en/test_data/: test_en_zh.txt  test_zh.txt
whisper/: .gitignore  README.md
whisper/cpp/: CMakeLists.txt  build.sh
whisper/cpp/src/: main.cpp  whisper_inference.cpp  whisper_inference.h
whisper/cpp/src/utils/: audio_utils.cpp  audio_utils.h
whisper/python/: export_onnx.py  gen_bmodel.sh  gen_bmodel_turbo.sh  gen_bmodel_w4a8_turbo.sh  gen_bmodel_w4f16.sh  gen_calib_data.py
whisper/python/analyze/: analyze_operators.py
whisper/python/test/: test_onnx.py  test_pytorch.py
